--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
-<body class="cool">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Books</title>
+  </head>
+
+  <body class="cool">
   <h1 class="hero">CSS Custom Properties</h1>
   <div class="main">
     <button class="btn">Click Me</button>
   </div>
-</body>
+  </body>
+
+  <section class = “container”>
+    <div class="card">
+        <h2 class="card-header"></h2>
+        <img class="card-author" src="" alt="" />
+        <h3 class="card-price"></h3>
+    </div>
+
+</html>
