--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Books</title>
   </head>
 
-  <body class="cool">
+  <body class="light">
   <h1 class="hero">CSS Custom Properties</h1>
   <div class="main">
     <button class="btn">Click Me</button>
@@ -19,8 +19,11 @@
   <section class = “container”>
     <div class="card">
         <h2 class="card-header"></h2>
-        <img class="card-author" src="" alt="" />
-        <h3 class="card-price"></h3>
+        <h3 class="card-author"></h3>
+        <h4 class="card-genre"></h3>
+        <a href="">
+          <button>Read</button>
+        </a>
     </div>
 
 </html>
