--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   </div>
   </body>
 
+  <body class="dark">
+  <h1 class="hero">CSS Custom Properties</h1>
+  <div class="main">
+    <button class="btn">Click Me</button>
+  </div>
+  </body>
+
   <section class = “container”>
     <div class="card">
         <h2 class="card-header"></h2>
