--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@
     <button class="btn">Click Me</button>
   </div>
   </body>
+<body>
+  <h1>Book</h1>
+  <div class = "">
+    <input type="text" placeholder="Search..">
+  </div>
 
-  <section class = “container”>
+  <section class = "container">
     <div class="card">
-        <h2 class="card-header"></h2>
-        <h3 class="card-author"></h3>
-        <h4 class="card-genre"></h3>
-        <a href="">
-          <button>Read</button>
-        </a>
+      <h2 class="card-header"></h2>
+      <h3 class="card-author"></h3>
+      <h4 class="card-genre"></h3>
+      <a href="">
+        <button>Read</button>
+      </a>
     </div>
-
+</body>
 </html>
